<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/rococo_rose_pink">

    <ImageView
        android:id="@+id/pl_iv_album_cover"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="10dp"
        android:foregroundGravity="center"
        android:maxWidth="180dp"
        android:maxHeight="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/album1" />

    <TextView
        android:id="@+id/pl_tv_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/album_kind1"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/pl_iv_album_cover"
        app:layout_constraintTop_toTopOf="@+id/pl_iv_album_cover" />

    <TextView
        android:id="@+id/pl_tv_album_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/album_name1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/pl_tv_album"
        app:layout_constraintTop_toBottomOf="@+id/pl_tv_album" />

    <TextView
        android:id="@+id/pl_tv_singer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/singer"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/pl_tv_album_title"
        app:layout_constraintTop_toBottomOf="@+id/pl_tv_album_title" />

    <ImageView
        android:id="@+id/pl_iv_play"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/pl_tv_singer"
        app:layout_constraintTop_toBottomOf="@+id/pl_tv_singer"
        app:srcCompat="@drawable/play" />

    <TextView
        android:id="@+id/pl_tv_title_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/title_song1"
        app:layout_constraintBottom_toBottomOf="@+id/pl_iv_play"
        app:layout_constraintStart_toEndOf="@+id/pl_iv_play"
        app:layout_constraintTop_toTopOf="@+id/pl_iv_play" />

    <TextView
        android:id="@+id/pl_tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/info1"
        app:layout_constraintBottom_toBottomOf="@+id/pl_iv_album_cover"
        app:layout_constraintStart_toStartOf="@+id/pl_iv_play"
        app:layout_constraintTop_toBottomOf="@+id/pl_iv_play" />

</androidx.constraintlayout.widget.ConstraintLayout>