<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mp_constraint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ap_back_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.7"
                app:srcCompat="@drawable/album17" />

        </FrameLayout>

        <ImageView
            android:id="@+id/ap_iv_album_image"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_marginTop="20dp"
            android:foregroundGravity="center"
            android:maxWidth="180dp"
            android:maxHeight="180dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_album_24" />

        <TextView
            android:id="@+id/ap_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/title_song1"
            android:textColor="@color/hjm_black"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="@+id/ap_iv_album_image"
            app:layout_constraintStart_toStartOf="@+id/ap_iv_album_image"
            app:layout_constraintTop_toBottomOf="@+id/ap_iv_album_image" />

        <TextView
            android:id="@+id/ap_tv_album_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/album_name1"
            android:textColor="@color/hjm_black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ap_iv_album_image"
            app:layout_constraintStart_toStartOf="@+id/ap_iv_album_image"
            app:layout_constraintTop_toBottomOf="@+id/ap_tv_title" />

        <TextView
            android:id="@+id/ap_tv_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/singer"
            android:textColor="@color/hjm_black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/ap_tv_album_id"
            app:layout_constraintStart_toStartOf="@+id/ap_tv_album_id"
            app:layout_constraintTop_toBottomOf="@+id/ap_tv_album_id" />

        <ImageView
            android:id="@+id/ap_iv_backward"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/ap_iv_play"
            app:layout_constraintEnd_toStartOf="@+id/ap_iv_play"
            app:layout_constraintTop_toTopOf="@+id/ap_iv_play"
            app:srcCompat="@drawable/ic_skip_previous_24" />

        <ImageView
            android:id="@+id/ap_iv_play"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ap_tv_artist"
            app:layout_constraintStart_toStartOf="@+id/ap_tv_artist"
            app:layout_constraintTop_toBottomOf="@+id/ap_tv_artist"
            app:srcCompat="@drawable/ic_play_arrow_24" />

        <ImageView
            android:id="@+id/ap_iv_fast_foward"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/ap_iv_play"
            app:layout_constraintStart_toEndOf="@+id/ap_iv_play"
            app:layout_constraintTop_toTopOf="@+id/ap_iv_play"
            app:srcCompat="@drawable/ic_skip_next_24" />

        <SeekBar
            android:id="@+id/ap_seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="-30dp"
            android:outlineAmbientShadowColor="#8C6DC6"
            app:layout_constraintEnd_toEndOf="@+id/ap_iv_fast_foward"
            app:layout_constraintStart_toStartOf="@+id/ap_iv_backward"
            app:layout_constraintTop_toBottomOf="@+id/ap_tv_artist" />

        <TextView
            android:id="@+id/ap_duration_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-20dp"
            android:layout_marginBottom="5dp"
            android:text="00:00"
            android:textColor="#8C6DC6"
            app:layout_constraintBottom_toBottomOf="@+id/ap_tv_artist"
            app:layout_constraintEnd_toStartOf="@+id/ap_seekBar" />

        <TextView
            android:id="@+id/ap_duration_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-20dp"
            android:layout_marginBottom="5dp"
            android:text="00:00"
            android:textColor="#8C6DC6"
            app:layout_constraintBottom_toBottomOf="@+id/ap_tv_artist"
            app:layout_constraintStart_toEndOf="@+id/ap_seekBar" />

        <ImageView
            android:id="@+id/ap_iv_playlist"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toStartOf="@+id/ap_iv_album_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ap_iv_album_image"
            app:srcCompat="@drawable/playlist" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

